--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <h4 id="currentLessonTitle" class="text-xl font-medium anima-blue mb-4">Selecione uma Aula</h4>
 
             <div id="videoPlayerContainer"
-              class="mb-4 bg-gray-200 rounded-lg flex items-center justify-center min-h-[200px] md:min-h-[400px]">
-              <p class="text-gray-500">Player de vídeo aparecerá aqui.</p>
+              class="mb-4 bg-gray-200 rounded-lg flex justify-center min-h-[300px] md:min-h-[400px] video-container">
+              <!-- <p class="text-gray-500">Player de vídeo aparecerá aqui.</p> -->
             </div>
 
             <a id="attachmentLink" href="#" target="_blank"
