--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- Login Page Wrapper -->
   <div id="loginPageWrapper">
     <div class="login-card">
-      <h2 class="text-3xl font-bold text-center anima-blue mb-6">Curso de Violão - Ânima</h2>
+      <img src="https://i.ibb.co/5gSvVs97/bitmap.png" alt="Logo Curso de Violão Ânima" class="mx-auto h-24 w-auto mb-4">
+      <h2 class="text-3xl font-bold text-center anima-blue mb-6">Curso de Violão</h2>
 
       <form id="userLoginForm" class="space-y-4 mb-4">
         <h3 class="text-xl font-semibold text-gray-700 mb-2">Login de Usuário</h3>
@@ -34,7 +35,7 @@
         <p id="userLoginError" class="text-red-500 text-sm mt-2"></p>
       </form>
 
-      <form id="userSignupForm" class="space-y-4 mb-4 hidden">
+      <!-- <form id="userSignupForm" class="space-y-4 mb-4 hidden">
         <h3 class="text-xl font-semibold text-gray-700 mb-2">Cadastro de Usuário</h3>
         <div>
           <label for="userSignupEmail" class="block text-sm font-medium text-gray-700">Email:</label>
@@ -61,7 +62,7 @@
         <button id="toggleToSignupBtn" class="text-sm anima-blue hover:underline">Não tem conta? Cadastre-se</button>
         <button id="toggleToLoginBtn" class="text-sm anima-blue hover:underline hidden">Já tem conta? Faça
           login</button>
-      </div>
+      </div> -->
       <hr class="my-6">
       <button id="pageAdminLoginBtn"
         class="w-full bg-gray-200 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400">Login
@@ -79,12 +80,16 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
-        <h1 class="text-xl md:text-2xl font-bold">Curso de Violão - Ânima</h1>
+        <!-- LOGO ADICIONADA AQUI NO HEADER -->
+        <img src="https://i.ibb.co/5gSvVs97/bitmap.png" alt="Logo" class="h-8 w-auto mr-3">
+        <h1 class="text-xl md:text-2xl font-bold">Curso de Violão</h1>
       </div>
-      <div>
-        <span id="loggedInUserEmail" class="text-sm mr-4"></span>
+      <div class="flex items-center">
+        <span id="loggedInUserEmail" class="hidden md:inline text-sm mr-4"></span>
+        <!-- BOTÃO MEU PERFIL ADICIONADO -->
+        <button id="profileBtn" class="profile-button hidden">Meu Perfil</button>
         <button id="userLogoutBtn"
-          class="hidden px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-600 transition-colors duration-150 text-sm">Sair</button>
+          class="hidden ml-2 px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-600 transition-colors duration-150 text-sm">Sair</button>
         <button id="adminLogoutBtn"
           class="hidden px-4 py-2 bg-red-700 text-white rounded-md hover:bg-red-800 transition-colors duration-150 text-sm">Sair
           (Admin)</button>
@@ -92,21 +97,38 @@
     </header>
 
     <div class="flex flex-1 overflow-hidden">
+
       <!-- Sidebar (Modules) -->
       <aside id="sidebar"
-        class="w-64 md:w-72 bg-white border-r border-gray-200 p-4 overflow-y-auto transform -translate-x-full md:translate-x-0 fixed md:static h-full md:h-auto z-10 sidebar">
-        <div class="flex justify-between items-center mb-4">
-          <h2 class="text-lg font-semibold anima-blue">Módulos do Curso</h2>
-          <button id="closeSidebarButton" class="p-2 rounded-md hover:bg-gray-200 md:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
+        class="w-64 md:w-72 bg-white border-r border-gray-200 p-4 overflow-y-auto transform -translate-x-full md:translate-x-0 fixed md:static h-full md:h-auto z-30 sidebar flex flex-col">
+        <div>
+          <div class="flex justify-between items-center mb-4">
+            <h2 class="text-lg font-semibold anima-blue">Módulos do Curso</h2>
+            <button id="closeSidebarButton" class="p-2 rounded-md hover:bg-gray-200 md:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </div>
+          <ul id="modulesList" class="flex-grow">
+            <!-- Modules will be loaded here by JavaScript -->
+          </ul>
         </div>
-        <ul id="modulesList">
-          <!-- Modules will be loaded here by JavaScript -->
-        </ul>
+        <!-- Este é o último div dentro da tag <aside> -->
+        <div class="mt-auto pt-4 pb-28 border-t border-gray-200">
+          <a href="https://wa.me/5561999356975" target="_blank" class="contact-button"
+            aria-label="Fale conosco pelo WhatsApp">
+            <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path fill="currentColor"
+                d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.8 0-67.6-9.5-97.8-26.7l-7-4.2-72.2 19L79 329.1l-4.5-7.3c-18.4-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" />
+            </svg>
+            <span>Contato Suporte</span>
+          </a>
+          <div class="mt-4 text-center text-xs text-gray-500">
+            <p>© Site desenvolvido por: <br> Alisson Guarniêr - 2025</p>
+          </div>
+        </div>
       </aside>
 
       <!-- Main Content Area -->
@@ -123,7 +145,7 @@
 
             <a id="attachmentLink" href="#" target="_blank"
               class="hidden inline-block px-6 py-3 anima-bg-blue text-white rounded-md hover:bg-blue-700 transition-colors duration-150">
-              Baixar Material Complementar (Drive)
+              Baixar Material Complementar
             </a>
           </div>
 
@@ -136,6 +158,23 @@
               <p class="text-gray-500">Selecione um módulo para ver as aulas.</p>
             </div>
           </div>
+
+          <!-- SEÇÃO DE COMENTÁRIOS ADICIONADA AQUI -->
+          <div id="commentsSection" class="mt-8 pt-6 border-t border-gray-300 hidden">
+            <h3 class="text-xl font-semibold text-gray-700 mb-4">Comentários da Aula</h3>
+            <!-- Formulário para adicionar comentário -->
+            <form id="addCommentForm" class="mb-6">
+              <textarea id="commentText" class="w-full p-2 border border-gray-300 rounded-md" rows="3"
+                placeholder="Deixe seu comentário ou dúvida..." required></textarea>
+              <button type="submit" class="mt-2 px-4 py-2 anima-bg-blue text-white rounded-md hover:bg-blue-700">Enviar
+                Comentário</button>
+            </form>
+            <!-- Container onde os comentários serão exibidos -->
+            <div id="commentsContainer" class="space-y-4">
+              <!-- Comentários serão carregados aqui pelo JavaScript -->
+            </div>
+          </div>
+
         </div>
       </main>
     </div>
